# meld

./: .editorconfig  .gitignore  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  README.md  SECURITY.md  eslint.config.mjs  package.json  pnpm-lock.yaml
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml
scripts/: changelog.sh  kb_audit.sh  kb_sync_check.sh  run_retrieval_eval.sh  screenshots.mjs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/Ego/: AGENTS.md
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/adapters/: emitter.rs  mod.rs
src-tauri/src/adapters/config/: mod.rs
src-tauri/src/adapters/embeddings/: mod.rs
src-tauri/src/adapters/git/: mod.rs
src-tauri/src/adapters/llm/: mod.rs
src-tauri/src/adapters/llm/providers/: anthropic.rs  google.rs  openai.rs
src-tauri/src/adapters/markdown/: mod.rs
src-tauri/src/adapters/mcp/: mod.rs  tests.rs
src-tauri/src/adapters/oauth/: mod.rs
src-tauri/src/adapters/providers/: mod.rs
src-tauri/src/adapters/rag/: eval.rs  mod.rs  rerank.rs
src-tauri/src/adapters/vault/: mod.rs
src-tauri/src/adapters/vectordb/: math.rs  mod.rs  tests.rs
src-tauri/src/core/: mod.rs
src-tauri/src/core/agent/: budget.rs  compaction.rs  events.rs  instructions.rs  ledger.rs  mod.rs  run.rs  state.rs  verification.rs
src-tauri/src/core/ports/: emitter.rs  llm.rs  mod.rs  store.rs  tools.rs
src-tauri/src/runtime/: mod.rs
src-tauri/src/runtime/tauri_api/: mod.rs
src-tauri/src/runtime/tauri_api/commands/: assistant.rs  conversations.rs  dev.rs  folders.rs  history.rs  mod.rs  settings.rs  shared.rs  vault.rs  watcher.rs
src-tauri/tests/retrieval_eval/: dataset.yaml
src/app/: layout.tsx  not-found.tsx  page.tsx
src/app/presskit/: page.tsx
src/components/chat/: AgentActivityIndicator.tsx  ChatView.tsx  MessageBubble.tsx  MessageInput.tsx
src/components/folders/: FolderSettingsPanel.tsx  folderIcons.tsx
src/components/history/: HistoryPanel.tsx
src/components/onboarding/: OnboardingFlow.tsx
src/components/settings/: SettingsPanel.tsx
src/components/sidebar/: ChatFolderRow.tsx  ConversationRow.tsx  Sidebar.tsx
src/components/tree/: TreeSurface.tsx  useTreeDndState.ts  (+1 more)
src/lib/: chatErrors.ts  chatModelOptions.ts  events.ts  providerCredentials.ts  store.ts  tauri.ts  wikilinks.ts
src/state/: selectors.ts
src/styles/: globals.css
(+22 files in other folders)
